fix: nav bar position and pre-responsive design

--- a/src/templates/navigation/navbar.html
+++ b/src/templates/navigation/navbar.html
@@ -1,130 +1,143 @@
-<nav class="flex flex-col h-screen w-full px-3 pt-8 bg-white shadow-lg">
-  <!-- Logo -->
-  <div class="text-2xl font-bold">
-    <a href="{% url 'home' %}" class="text-primary_medium flex gap-2 px-3 items-center">
-      <i>{% include 'icon/flowlance.html' with w='32' h='32' %}</i>
-      <span>Flowlance</span>
-    </a>
+<nav class="flex flex-col h-screen justify-between w-full px-3 py-8 bg-white shadow-lg">
+  <!-- Up Section -->
+  <div>
+    <!-- Logo -->
+    <div class="text-2xl font-bold">
+      <a href="{% url 'home' %}" class="text-primary_medium flex gap-2 px-3 items-center">
+        <i>{% include 'icon/flowlance.html' with w='32' h='32' %}</i>
+        <span>Flowlance</span>
+      </a>
+    </div>
+
+    <!-- Main Menu -->
+    <div class="text-primary_lightest p-3 mt-3">MAIN MENU</div>
+
+    <div class="flex flex-col gap-1">
+      <!-- Dashboard Link -->
+      {% if 'dashboard' in request.path %}
+      {% with icon_property="bold" %}
+      <a href="{% url 'dashboard' %}" class="flex items-center p-3 gap-3 bg-primary_medium text-white rounded-lg">
+        {% include 'icon/home.html' with property=icon_property %}
+        Dashboard
+      </a>
+      {% endwith %}
+      {% else %}
+      {% with icon_property="outline" %}
+      <a href="{% url 'dashboard' %}" class="flex items-center p-3 gap-3 text-primary_medium hover:bg-bg_gray rounded">
+        {% include 'icon/home.html' with property=icon_property %}
+        Dashboard
+      </a>
+      {% endwith %}
+      {% endif %}
+
+      <!-- Proyectos Link -->
+      {% if 'project' in request.path %}
+      {% with icon_property="bold" %}
+      <a href="{% url 'project_list' %}" class="flex items-center p-3 gap-3 bg-primary_medium text-white rounded-lg">
+        {% include 'icon/slider-vertical.html' with property=icon_property %}
+        Proyectos
+      </a>
+      {% endwith %}
+      {% else %}
+      {% with icon_property="outline" %}
+      <a href="{% url 'project_list' %}"
+        class="flex items-center p-3 gap-3 text-primary_medium hover:bg-bg_gray rounded">
+        {% include 'icon/slider-vertical.html' with property=icon_property %}
+        Proyectos
+      </a>
+      {% endwith %}
+      {% endif %}
+
+      <!-- Chat Link -->
+      {% if 'chat' in request.path %}
+      {% with icon_property="bold" %}
+      <a href="{% url 'chat' %}" class="flex items-center p-3 gap-3 bg-primary_medium text-white rounded-lg">
+        {% include 'icon/message.html' with property=icon_property %}
+        Chat
+      </a>
+      {% endwith %}
+      {% else %}
+      {% with icon_property="outline" %}
+      <a href="{% url 'chat' %}" class="flex items-center p-3 gap-3 text-primary_medium hover:bg-bg_gray rounded">
+        {% include 'icon/message.html' with property=icon_property %}
+        Chat
+      </a>
+      {% endwith %}
+      {% endif %}
+
+      <!-- Mi Perfil Link -->
+      {% if 'profile' in request.path %}
+      {% with icon_property="bold" %}
+      <a href="{% url 'freelancer_profile' %}"
+        class="flex items-center p-3 gap-3 bg-primary_medium text-white rounded-lg">
+        {% include 'icon/profile.html' with property=icon_property %}
+        Mi Perfil
+      </a>
+      {% endwith %}
+      {% else %}
+      {% with icon_property="outline" %}
+      <a href="{% url 'freelancer_profile' %}"
+        class="flex items-center p-3 gap-3 text-primary_medium hover:bg-bg_gray rounded">
+        {% include 'icon/profile.html' with property=icon_property %}
+        Mi Perfil
+      </a>
+      {% endwith %}
+      {% endif %}
+    </div>
   </div>
 
-  <!-- Main Menu -->
-  <div class="text-primary_lightest p-3 mt-3">MAIN MENU</div>
-  <div class="flex flex-col gap-1">
-    <!-- Dashboard Link -->
-    {% if 'dashboard' in request.path %}
-      {% with icon_property="bold" %}
-        <a href="{% url 'dashboard' %}" class="flex items-center p-3 gap-3 bg-primary_medium text-white rounded-lg">
-          {% include 'icon/home.html' with property=icon_property %}
-          Dashboard
-        </a>
-      {% endwith %}
-    {% else %}
-      {% with icon_property="outline" %}
-        <a href="{% url 'dashboard' %}" class="flex items-center p-3 gap-3 text-primary_medium hover:bg-bg_gray rounded">
-          {% include 'icon/home.html' with property=icon_property %}
-          Dashboard
-        </a>
-      {% endwith %}
-    {% endif %}
+  <!-- Down section -->
+  <div>
 
-    <!-- Proyectos Link -->
-    {% if 'project' in request.path %}
-      {% with icon_property="bold" %}
-        <a href="{% url 'project_list' %}" class="flex items-center p-3 gap-3 bg-primary_medium text-white rounded-lg">
-          {% include 'icon/slider-vertical.html' with property=icon_property %}
-          Proyectos
-        </a>
-      {% endwith %}
-    {% else %}
-      {% with icon_property="outline" %}
-        <a href="{% url 'project_list' %}" class="flex items-center p-3 gap-3 text-primary_medium hover:bg-bg_gray rounded">
-          {% include 'icon/slider-vertical.html' with property=icon_property %}
-          Proyectos
-        </a>
-      {% endwith %}
-    {% endif %}
+    <!-- Preferences Section -->
+    <div class="text-primary_lightest p-3 mt-3">PREFERENCIAS</div>
 
-    <!-- Chat Link -->
-    {% if 'chat' in request.path %}
+    <div class="flex flex-col gap-1">
+      <!-- Ajustes Link -->
+      {% if 'settings' in request.path %}
       {% with icon_property="bold" %}
-        <a href="{% url 'chat' %}" class="flex items-center p-3 gap-3 bg-primary_medium text-white rounded-lg">
-          {% include 'icon/message.html' with property=icon_property %}
-          Chat
-        </a>
+      <a href="{% url 'settings' %}" class="flex items-center p-3 gap-3 bg-primary_medium text-white rounded-lg">
+        {% include 'icon/settings.html' with property=icon_property %}
+        Ajustes
+      </a>
       {% endwith %}
-    {% else %}
+      {% else %}
       {% with icon_property="outline" %}
-        <a href="{% url 'chat' %}" class="flex items-center p-3 gap-3 text-primary_medium hover:bg-bg_gray rounded">
-          {% include 'icon/message.html' with property=icon_property %}
-          Chat
-        </a>
+      <a href="{% url 'settings' %}" class="flex items-center p-3 gap-3 text-primary_medium hover:bg-bg_gray rounded">
+        {% include 'icon/settings.html' with property=icon_property %}
+        Ajustes
+      </a>
       {% endwith %}
-    {% endif %}
+      {% endif %}
 
-    <!-- Mi Perfil Link -->
-    {% if 'profile' in request.path %}
+      <!-- Ayuda y Soporte Link -->
+      {% if 'support' in request.path %}
       {% with icon_property="bold" %}
-        <a href="{% url 'freelancer_profile' %}" class="flex items-center p-3 gap-3 bg-primary_medium text-white rounded-lg">
-          {% include 'icon/profile.html' with property=icon_property %}
-          Mi Perfil
-        </a>
+      <a href="{% url 'support' %}" class="flex items-center p-3 gap-3 bg-primary_medium text-white rounded-lg">
+        {% include 'icon/info-circle.html' with property=icon_property %}
+        Ayuda y Soporte
+      </a>
       {% endwith %}
-    {% else %}
+      {% else %}
       {% with icon_property="outline" %}
-        <a href="{% url 'freelancer_profile' %}" class="flex items-center p-3 gap-3 text-primary_medium hover:bg-bg_gray rounded">
-          {% include 'icon/profile.html' with property=icon_property %}
-          Mi Perfil
-        </a>
+      <a href=" " class="flex items-center p-3 gap-3 text-primary_medium hover:bg-bg_gray rounded">
+        {% include 'icon/info-circle.html' with property=icon_property %}
+        Ayuda y Soporte
+      </a>
       {% endwith %}
-    {% endif %}
-  </div>
+      {% endif %}
 
-  <!-- Preferences Section -->
-  <div class="text-primary_lightest p-3 mt-3">PREFERENCIAS</div>
-  
-  <div class="flex flex-col gap-1">
-    <!-- Ajustes Link -->
-    {% if 'settings' in request.path %}
-      {% with icon_property="bold" %}
-        <a href="{% url 'settings' %}" class="flex items-center p-3 gap-3 bg-primary_medium text-white rounded-lg">
-          {% include 'icon/settings.html' with property=icon_property %}
-          Ajustes
-        </a>
-      {% endwith %}
-    {% else %}
-      {% with icon_property="outline" %}
-        <a href="{% url 'settings' %}" class="flex items-center p-3 gap-3 text-primary_medium hover:bg-bg_gray rounded">
-          {% include 'icon/settings.html' with property=icon_property %}
-          Ajustes
-        </a>
-      {% endwith %}
-    {% endif %}
-
-    <!-- Ayuda y Soporte Link -->
-    {% if 'support' in request.path %}
-      {% with icon_property="bold" %}
-        <a href="{% url 'support' %}" class="flex items-center p-3 gap-3 bg-primary_medium text-white rounded-lg">
-          {% include 'icon/info-circle.html' with property=icon_property %}
-          Ayuda y Soporte
-        </a>
-      {% endwith %}
-    {% else %}
-      {% with icon_property="outline" %}
-        <a href=" " class="flex items-center p-3 gap-3 text-primary_medium hover:bg-bg_gray rounded">
-          {% include 'icon/info-circle.html' with property=icon_property %}
-          Ayuda y Soporte
-        </a>
-      {% endwith %}
-    {% endif %}
-
-    <!-- Log Out Link -->
-    <form action="{% url 'logout' %}" method="post" class="inline w-full">
-      {% csrf_token %}
-      <button type="submit" class="flex items-center p-3 gap-3 text-primary_medium hover:bg-bg_gray rounded w-full">
+      <!-- Log Out Link -->
+      <form action="{% url 'logout' %}" method="post" class="inline w-full">
+        {% csrf_token %}
+        <button type="submit" class="flex items-center p-3 gap-3 text-primary_medium hover:bg-bg_gray rounded w-full">
           {% include 'icon/logout.html' with property="outline" %}
           Log Out
-      </button>
-  </form>
-  
+        </button>
+      </form>
+
+    </div>
+
   </div>
+
 </nav>
