--- a/src/theme/templates/base.html
+++ b/src/theme/templates/base.html
@@ -17,7 +17,7 @@
 <body class="bg-bg_white flex flex-col p-0 m-0 font-plus_jakarta_sans">
 
 	<!-- Header or navbar can go here -->
-	<div class= "flex flex-col justify-start w-screen">
+	<div class= "flex flex-col justify-start w-full">
 		{% block content %}
 		{% endblock %}
 	</div>
@@ -27,9 +27,3 @@
 </body>
 
 </html>
-
-<style>
-	html {
-		font-family: 'Plus Jakarta Sans', sans-serif;	
-	}
-</style>
