--- a/src/templates/projects/time_line.html
+++ b/src/templates/projects/time_line.html
@@ -2,13 +2,49 @@
 {% load static %}
 
 {% block section %}
+
 <h2 class="text-2xl font-bold text-primary_black mb-5">Linea de Tiempo</h2>
-<div id="timeline"></div>
+<div id="visualization"></div>
 
-<link href="https://cdn.jsdelivr.net/npm/vis-timeline@7.4.1/dist/vis-timeline-graph2d.min.css" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/vis-timeline@7.4.1/dist/vis-timeline-graph2d.min.js"></script>
-
-
+<script type="text/javascript" src="https://unpkg.com/moment@latest"></script>
+<script type="text/javascript" src="https://unpkg.com/vis-data@latest/peer/umd/vis-data.min.js"></script>
+<script type="text/javascript"
+    src="https://unpkg.com/vis-timeline@latest/peer/umd/vis-timeline-graph2d.min.js"></script>
+<link rel="stylesheet" type="text/css" href="https://unpkg.com/vis-timeline/styles/vis-timeline-graph2d.min.css" />
 <link href="{% static 'css/project/timeline.css' %}" rel="stylesheet">
-<script src="{% static 'js/project/timeline.js' %}"></script>
-{% endblock %} 
+
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        var container = document.getElementById('visualization');
+
+        // Use the Django template to inject JSON data for the milestones
+        var items = new vis.DataSet({{ milestone_data|safe }});
+
+        // Get current date
+        var today = new Date();
+        var firstDayOfMonth = new Date(today.getFullYear(), today.getMonth(), 1);
+        var lastDayOfMonth = new Date(today.getFullYear(), today.getMonth() + 1, 0); // last day of the current month
+
+        var options = {
+            groupOrder: 'content',
+            width: '100%',
+            height: '400px',
+            stack: true,
+            showMajorLabels: true,
+            showMinorLabels: true,
+            zoomMin: 1000 * 60 * 60 * 24, // one day
+            zoomMax: 1000 * 60 * 60 * 24 * 365, // about a year
+            orientation: 'top',
+            start: firstDayOfMonth,
+            end: lastDayOfMonth,
+            timeAxis: { scale: 'day', step: 1 }
+        };
+
+        var timeline = new vis.Timeline(container, items, options);
+    });
+</script>
+
+
+{% endblock %}
+
+
