--- a/src/templates/projects/project_main_view.html
+++ b/src/templates/projects/project_main_view.html
@@ -1,3 +1,4 @@
+
 {% extends "navigation/navigation.html" %}
 
 {% block app_content %}
@@ -5,6 +6,7 @@
     <div class="flex flex-row gap-2">
         {% include 'utils/anchor_button.html' with label='Disponibles' type=1 %}
         {% url 'my_projects' as list_projects_available %}
+        
         {% include 'utils/anchor_button.html' with label='Mis Proyectos' type=2 url=list_projects_available %}
     </div>
     <div class="flex">
@@ -13,14 +15,20 @@
     </div>
 </div>
 
-<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4 bg-bg_gray w-full h-full p-4 rounded-xl">
-    {% for project in projects %}
-        {% include 'projects/project_card.html' %}
-
-        {% empty %}
-        <p class="text-gray-500 col-span-3">Sin resultados.</p>
-
-    {% endfor %}
+<div class="container mx-auto px-4 py-8">
+    <div class="flex justify-between items-center mb-6">
+        <h1 class="text-3xl font-bold">Proyectos Disponibles</h1>
+    </div>
+    
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4 bg-bg_gray w-full h-full p-4 rounded-xl">
+        {% for project in projects %}
+            {% include 'projects/project_card.html' %}
+    
+            {% empty %}
+            <p class="text-gray-500 col-span-3">Sin resultados.</p>
+    
+        {% endfor %}
+    </div>
+    
 </div>
-
 {% endblock app_content %}
