--- a/src/templates/projects/assigment_section.html
+++ b/src/templates/projects/assigment_section.html
@@ -9,7 +9,7 @@
         <div class="flex flex-col">
             <!-- Add a scrollable container with fixed height -->
             <div class="overflow-y-auto h-64 w-full p-4 bg-gray-100 rounded-lg">
-                {% for assigment in milestone.assigments.all %}
+                {% for assigment in assigments %}
                 <div class="bg-bg_white p-4 mb-4 rounded-lg space-y-4 shadow-md">
                     <div class="flex justify-between items-center">
                         <h3 class="text-md font-bold text-primary_medium text-right">{{ assigment.title }}</h3>
