--- a/src/templates/projects/default_project_view.html
+++ b/src/templates/projects/default_project_view.html
@@ -7,14 +7,15 @@
     <!-- Navigation Tabs -->
     <div class="flex items-center justify-center gap-5 bg-primary_lightest rounded-xl px-20 py-2 text-white">
         <a href="/project/{{ project.id }}/milestone"
-           class="text-md font-semibold bg-primary_light rounded-xl px-10 py-1 {% if section == 'milestone' %} !bg-primary_dark text-white{% endif %}">Hitos</a>
+           class="text-md font-semibold bg-primary_light rounded-xl px-10 py-1 hover:bg-primary_dark transform transition-transform duration-300 hover:scale-110 {% if section == 'milestone' %} !bg-primary_dark text-white{% endif %}">Hitos</a>
         <a href="/project/{{ project.id }}/task"
-           class="text-md font-semibold bg-primary_light rounded-xl px-10 py-1 {% if section == 'task' %} !bg-primary_dark text-white{% endif %}">Tareas</a>
+           class="text-md font-semibold bg-primary_light rounded-xl px-10 py-1 hover:bg-primary_dark transform transition-transform duration-300 hover:scale-110 {% if section == 'task' %} !bg-primary_dark text-white{% endif %}">Tareas</a>
         <a href="/project/{{ project.id }}/time_line"
-           class="text-md font-semibold bg-primary_light rounded-xl px-10 py-1 {% if section == 'time_line' %} !bg-primary_dark text-white{% endif %}">Línea de Tiempo</a>
+           class="text-md font-semibold bg-primary_light rounded-xl px-10 py-1 hover:bg-primary_dark transform transition-transform duration-300 hover:scale-110 {% if section == 'time_line' %} !bg-primary_dark text-white{% endif %}">Línea de Tiempo</a>
         <a href="/project/{{ project.id }}/calendar"
-           class="text-md font-semibold bg-primary_light rounded-xl px-10 py-1 {% if section == 'calendar' %} !bg-primary_dark text-white{% endif %}">Calendario</a>
+           class="text-md font-semibold bg-primary_light rounded-xl px-10 py-1 hover:bg-primary_dark transform transition-transform duration-300 hover:scale-110 {% if section == 'calendar' %} !bg-primary_dark text-white{% endif %}">Calendario</a>
     </div>
+    
 
     <!-- Panel de Control -->
     <h1 class="text-primary_black text-2xl font-bold mt-4">Panel de control</h1>
@@ -38,48 +39,78 @@
 
                 <div class="flex space-x-4">
                     <a href="{% url 'project_edit' project.pk %}"
-                        class="bg-[#636AF2] text-white px-4 py-2 rounded-lg hover:bg-blue-600 transition-colors">
+                        class="bg-primary_medium text-white px-4 py-2 rounded-xl mt-4 hover:bg-primary_dark transform transition-transform duration-300 hover:scale-110">
                         Editar
                     </a>
                     <a href="{% url 'project_requirements' project.pk %}"
-                        class="bg-[#636AF2] text-white px-4 py-2 rounded-lg hover:bg-gray-600 transition-colors">
+                        class="bg-primary_medium text-white px-4 py-2 rounded-xl mt-4 hover:bg-primary_dark transition-transform duration-300 hover:scale-110">
                         Ver Requerimientos
                     </a>
                 </div>
 
                 <form method="POST" action="{% url 'apply_project' project.id %}">
                     {% csrf_token %}
-                    <button type="submit" class="bg-primary_medium text-white px-4 py-2 rounded-xl mt-4">
+                    <button type="submit" class="bg-primary_medium text-white px-4 py-2 rounded-xl mt-4 hover:bg-primary_dark transition-transform duration-300 hover:scale-110">
                         Postularse a este proyecto
                     </button>
                 </form>
 
                 <!-- Aplications list -->
-                <button id="showApplications" class="bg-primary_medium text-white px-4 py-2 rounded-xl mt-4">
+                <button id="showApplications" class="bg-primary_medium text-white px-4 py-2 rounded-xl mt-4 hover:bg-primary_dark transition-transform duration-300 hover:scale-110">
                     Ver Postulaciones
                 </button>
               
 
                 <!-- Boton eliminar -->
-                <div class="mt-4 flex space-x-4 justify-end">
+                <div class="mt-4 flex space-x-4 items-center">
                     <a href="{% url 'project_delete' project.pk %}"
-                        class="bg-red-500 text-white px-4 py-2 rounded-lg hover:bg-red-600 transition-colors">
+                        class="bg-red-500 text-white px-4 py-2 rounded-xl hover:bg-red-600 transition-transform duration-300 hover:scale-110 hover:animate-wiggle">
                         Eliminar Proyecto
                     </a>
-                    <div class="flex flex-row gap-2">
-
-                        {% url 'my_projects' as list_projects_available %}
-                        {% include 'utils/anchor_button.html' with label='Mis Proyectos' type=1 url=list_projects_available%}
-                    </div>
+                
+                    <a href="{% url 'my_projects' %}"
+                        class="bg-blue-500 text-white px-4 py-2 rounded-xl hover:bg-blue-600 transition-transform duration-300 hover:scale-110">
+                        Mis Proyectos
+                    </a>
                 </div>
-
-                    
+                
+                <div class="p-3 border border-primary_medium rounded-lg bg-bg_gray shadow-sm mt-4">
                     {% if application %}
-                        <p class="text-sm text-primary_medium mt-2">Estado de la postulación: <span class="font-bold">{{ application.status }}</span></p>
+                        <div class="flex items-center space-x-2">
+                            {% if application.status == "Rechazada" %}
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-red-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+                                </svg>
+                                <p class="text-lg text-primary_black font-semibold">
+                                    Estado de la postulación: 
+                                    <span class="text-red-500 font-bold">{{ application.status }}</span>
+                                </p>
+                            {% elif application.status == "Aceptada" %}
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-green-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                                </svg>
+                                <p class="text-lg text-primary_black font-semibold">
+                                    Estado de la postulación: 
+                                    <span class="text-green-500 font-bold">{{ application.status }}</span>
+                                </p>
+                            {% else %}
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-yellow-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
+                                </svg>
+                                <p class="text-lg text-primary_black font-semibold">
+                                    Estado de la postulación: 
+                                    <span class="text-yellow-500 font-bold">{{ application.status }}</span>
+                                </p>
+                            {% endif %}
+                        </div>
                     {% else %}
-                        <p class="text-sm text-primary_medium mt-2">No te has postulado a este proyecto aún.</p>
+                        <p class="text-lg text-primary_black font-semibold mt-2">
+                            No te has postulado a este proyecto aún.
+                        </p>
                     {% endif %}
                 </div>
+                
+                
             </div>
         </div>
     </div>
@@ -89,8 +120,8 @@
     </div>
 
     <!-- Pop-up of applications -->
-    <div id="applicationsModal" class="fixed inset-0 bg-black bg-opacity-50 flex justify-center items-center hidden">
-        <div class="bg-white p-6 rounded-lg shadow-lg w-1/2">
+    <div id="applicationsModal" class="fixed inset-0 bg-black bg-opacity-50 flex justify-center items-center">
+        <div class="bg-white p-6 rounded-xl shadow-lg w-1/2">
             <h2 class="text-2xl font-bold mb-4">Postulaciones al Proyecto</h2>
             <ul>
                 {% for application in applications %}
@@ -118,7 +149,7 @@
                 <p>No hay postulaciones para este proyecto.</p>
                 {% endfor %}
             </ul>
-            <button id="closeModal" class="mt-4 bg-red-500 text-white px-4 py-2 rounded-lg">Cerrar</button>
+            <button id="closeModal" class="mt-4 bg-red-500 text-white px-4 py-2 rounded-xl">Cerrar</button>
         </div>
     </div>
 
