--- a/src/templates/projects/assigment_section.html
+++ b/src/templates/projects/assigment_section.html
@@ -20,7 +20,7 @@
                             </a>
                             <!-- botton de editar -->
                             <a href="/project/assigment/edit/{{assigment.id}}">
-                                {% include 'icon/EditIcon.html' with h=24 w=24 %}
+                                {% include 'icon/EditIcon.html' with h=30 w=24 %}
                             </a>
                         </div>
                     </div>
@@ -55,8 +55,10 @@
                     <div class="flex justify-end">
                         <button id="confirm-button-assigment"
                             class="bg-red-600 text-white px-4 py-2 rounded-lg">Confirmar</button>
-                        <button id="cancel-button-assigment"
-                            class="ml-2 bg-gray-300 px-4 py-2 rounded-lg">Cancelar</button>
+                            <button id="cancel-button-assigment"
+                            class="ml-2 bg-gray-300 px-4 py-2 rounded-lg hover:bg-gray-400 transition-transform duration-300 hover:scale-110">
+                            Cancelar
+                    </button>
                     </div>
                 </div>
             </div>
