--- a/src/templates/projects/task_creation.html
+++ b/src/templates/projects/task_creation.html
@@ -80,11 +80,14 @@
                 </select>
             </div>
 
-            <div class="justify-end  items-center">
-                <a href="/project/{{project_id}}/task">
-                    <button type="button" class="bg-gray-300 text-gray-800 px-4 py-2 rounded-lg mr-2">Cancelar</button>
-                </a>
-                <button type="submit" class="bg-primary_medium text-white px-4 py-2 rounded-lg">Guardar</button>
+            <div class="mt-9">
+                <div class="justify-end  items-center">
+                    <a href="/project/{{project_id}}/task">
+                        <button type="button"
+                            class="bg-gray-300 text-gray-800 px-4 py-2 rounded-xl mr-2 hover:bg-gray-400 transition-transform duration-300 hover:scale-110">Cancelar</button>
+                    </a>
+                    <button type="submit" class="bg-primary_medium text-white px-4 py-2 rounded-xl mt-4 hover:bg-primary_dark transition-transform duration-300 hover:scale-110">Guardar</button>
+                </div>
             </div>
         </form>
     </div>
