--- a/src/templates/utils/popup_success.html
+++ b/src/templates/utils/popup_success.html
@@ -1,7 +1,7 @@
 
 {% load static %}
 <div id="success-notification"
-    class="mt-10 hidden fixed top-5 right-10 bg-green-500 text-white p-5 px-7 rounded-lg shadow-lg items-start justify-between space-x-4">
+    class="mt-10 hidden fixed top-5 right-10 bg-green-500 text-white p-5 px-7 rounded-lg shadow-lg flex items-start justify-between space-x-4">
     <div class="flex items-center">
         <span id="notification-message"></span>
     </div>
