--- a/src/templates/projects/default_project_view.html
+++ b/src/templates/projects/default_project_view.html
@@ -67,11 +67,11 @@
                         class="bg-red-500 text-white px-4 py-2 rounded-xl hover:bg-red-600 transition-transform duration-300 hover:scale-110 hover:animate-wiggle">
                         Eliminar Proyecto
                     </a>
-                
-                    <a href="{% url 'my_projects' %}"
+                    
+                    <!-- <a href="{% url 'my_projects' %}"
                         class="bg-blue-500 text-white px-4 py-2 rounded-xl hover:bg-blue-600 transition-transform duration-300 hover:scale-110">
                         Mis Proyectos
-                    </a>
+                    </a> -->
                 </div>
                 
                 <div class="p-3 border border-primary_medium rounded-lg bg-bg_gray shadow-sm mt-4">
