--- a/src/templates/projects/project_form.html
+++ b/src/templates/projects/project_form.html
@@ -21,10 +21,10 @@
             {% endfor %}
             <div class="flex justify-end space-x-2 mt-6">
                 <a href="/project/{{project.id}}/milestone" class="px-4 py-2 bg-gray-300 text-gray-700 rounded-md hover:bg-gray-400 transition-colors">
-                    Cancel
+                    Cancelar
                 </a>
                 <button type="submit" class="px-4 py-2 bg-primary_light text-white rounded-md hover:bg-primary_medium transition-colors">
-                    {{ action }} Project
+                    {{ action }} proyecto
                 </button>
             </div>
         </form>
