--- a/src/templates/projects/tasks.html
+++ b/src/templates/projects/tasks.html
@@ -7,7 +7,6 @@
     {% url 'create_task' project.id as add_task_url %}
     {% include 'utils/anchor_button.html' with type=1 label='Añadir' url=add_task_url %}
     {% if messages %}
-    <!-- This block checks for Django messages -->
     <div id="messages" class="hidden">
         {% for message in messages %}
         <span>{{ message }}</span>
@@ -27,7 +26,20 @@
         <p class="text-sm text-primary_medium">Fecha de Inicio: {{ task.start_date }}</p>
         <p class="text-sm text-primary_medium">Fecha de Finalización: {{ task.end_date }}</p>
         <p class="text-sm text-primary_medium">{{ task.description|truncatewords:50 }}</p>
-        <p class="text-sm text-primary_medium">Prioridad: {{ task.priority}}</p>
+        <p class="text-sm text-primary_medium">Prioridad: {{ task.priority }}</p>
+        
+        <!-- Sección para Actualizar Estado -->
+        <form method="POST" action="{% url 'update_task_state' task.id %}" class="mt-2">
+            {% csrf_token %}
+            <label for="state" class="block text-sm font-medium text-primary_black">Estado Actual: {{ task.state }}</label>
+            <select name="state" id="state" class="border border-gray-300 p-2 rounded w-full mt-1">
+                <option value="Pendiente" {% if task.state == 'Pendiente' %}selected{% endif %}>Pendiente</option>
+                <option value="En Progreso" {% if task.state == 'En Progreso' %}selected{% endif %}>En Progreso</option>
+                <option value="Completada" {% if task.state == 'Completada' %}selected{% endif %}>Completada</option>
+               
+            </select>
+            <button type="submit" class="bg-primary_medium text-white px-4 py-2 rounded-lg mt-2">Actualizar Estado</button>
+        </form>
 
         <!-- Sección de Descripciones -->
         <h4 class="text-primary_black font-semibold mt-2">Descripciones Adicionales</h4>
@@ -45,6 +57,7 @@
             {% endfor %}
         </ul>
 
+        <!-- Agregar descripción -->
         <form method="POST" action="{% url 'add_description' task.id %}" class="mt-2">
             {% csrf_token %}
             <textarea name="content" class="w-full border p-2 rounded" placeholder="Escribe una descripción..." required></textarea>
@@ -87,12 +100,10 @@
             <textarea name="content" class="w-full border p-2 rounded" placeholder="Escribe tu comentario..." required></textarea>
             <button type="submit" class="bg-primary_medium text-white px-4 py-2 rounded-lg mt-2">Agregar Comentario</button>
         </form>
-
     </div>
     {% endfor %}
     {% endfor %}
 </div>
 
 {% include 'utils/popup_success.html' %}
-
 {% endblock %}
